fix alignment of borders

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -3174,7 +3174,7 @@ a {
 		top: remCalc(91px);
 		bottom: 0;
 		left: 50%;
-		margin-left: -1px;
+		margin-left: -2px;
 		border-left: 1px solid #000;
 		z-index: 1;
 	}
